Updated info on one of the products

--- a/webProject/html/Mashtag-2015.html
+++ b/webProject/html/Mashtag-2015.html
@@ -15,7 +15,7 @@
 					loaded with American Hops for floral,
 					citrus flavours and warm boozy vanilla and toasted oak.
           <div>10</div>
-          <img alt="" src=""></img>
+          <img alt="Image for #Mashtag 2015" src="https://images.punkapi.com/v2/90.png"></img>
       </p>
 			<h4>Food Pairings</h4>
       <ul>
