--- a/webProject/html/search.html
+++ b/webProject/html/search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Search</title>
 </head>
 <body>
     <h2> Search </h2>
@@ -12,8 +12,7 @@
     <button id="search-button"> Search </button>
 
     <form>
-        <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname"><br>
+      <input type="text" id="searchField" name="searchField"><br>
     </form>
     <div id="search-list">
 
