--- a/webProject/html/search.html
+++ b/webProject/html/search.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../css/footer.css" rel="stylesheet"/>
     <title>Search</title>
 </head>
 <body>
@@ -17,7 +18,19 @@
     <div id="search-list">
 
     </div>
-    
+
+		<footer>
+      <div id="socials">
+        <h4>Social Media</h4>
+          <ul>
+              <li><a href="www.facebook.com">Facebook</a></li>
+              <li><a href="www.twitter.com">Twitter</a></li>
+              <li><a href="www.youtube.com">Youtube</a></li>
+              <li><a href="www.instagram.com">Instagram</a></li>
+          </ul>
+      </div>
+      <div id="copyright">&copy Team 1 2021, This work is fictional any resemblence to people living or desceased is purely coincidental</div>
+		</footer>
     <script src="../js/search.js"></script>
 </body>
 </html>
