Added footer to other pages

--- a/webProject/html/Misspent-Youth.html
+++ b/webProject/html/Misspent-Youth.html
@@ -1,26 +1,39 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <title>Misspent Youth</title>
-    </head>
-    <body>
-      <h1>Misspent Youth</h1>
-      <h3>
-          Milk & Honey Scotch Ale.
-      </h3>
-      <h4>04/2013</h4>
-      <p>
-          The brainchild of our small batch brewer,
-					George Woods.A dangerously drinkable milk sugar- infused Scotch Ale.
-          <div>7.3</div>
-          <img alt="Image for Misspent Youth" src="https://images.punkapi.com/v2/keg.png"></img>
-      </p>
-			<h4>Food Pairings</h4>
-      <ul>
-          <li>Roasted garlic and chilli infused camembert cheese</li>
-          <li>Korean style chicken wings</li>
-          <li>Chocolate milk shake</li>
-      </ul>
-    </body>
+  <head>
+    <meta charset="UTF-8"/>
+    <title>Misspent Youth</title>
+		<link href="../css/footer.css" rel="stylesheet"/>
+  </head>
+  <body>
+    <h1>Misspent Youth</h1>
+    <h3>
+      Milk & Honey Scotch Ale.
+    </h3>
+    <h4>04/2013</h4>
+    <p>
+      The brainchild of our small batch brewer,
+			George Woods.A dangerously drinkable milk sugar- infused Scotch Ale.
+      <div>7.3</div>
+      <img alt="Image for Misspent Youth" src="https://images.punkapi.com/v2/keg.png"></img>
+    </p>
+		<h4>Food Pairings</h4>
+    <ul>
+      <li>Roasted garlic and chilli infused camembert cheese</li>
+      <li>Korean style chicken wings</li>
+      <li>Chocolate milk shake</li>
+    </ul>
+		<footer>
+			<div id="socials">
+				<h4>Social Media</h4>
+        <ul>
+          <li><a href="www.facebook.com">Facebook</a></li>
+          <li><a href="www.twitter.com">Twitter</a></li>
+          <li><a href="www.youtube.com">Youtube</a></li>
+          <li><a href="www.instagram.com">Instagram</a></li>
+        </ul>
+			</div>
+			<div id="copyright">&copy Team 1 2021, This work is fictional any resemblence to people living or desceased is purely coincidental</div>
+		</footer>
+  </body>
 </html>
