--- a/webProject/html/products.html
+++ b/webProject/html/products.html
@@ -4,35 +4,52 @@
     <meta charset="UTF-8"/>
     <title>Products</title>
     <link href="../css/products.css" rel="stylesheet"/>
+		<link href="../css/footer.css" rel="stylesheet"/>
   </head>
   <body>
     <h1>Products</h1>
-    <ul>
+    <ul class="product-list">
       <li>
         <a href="Casino-Rye-Ale.html">
           <h2>Casino Rye Ale</h2>
+          <h6>Life's a Gamble</h6>
           <img alt="Image of Casino Rye Ale" src=""/>
 				</a>
       </li>
       <li>
         <a href="Misspent-Youth.html">
           <h2>Misspent Youth</h2>
+          <h6>Milk & Honey Scotch Ale.</h6>
           <img alt="Image of Misspent Youth" src="https://images.punkapi.com/v2/keg.png"/>
 				</a>
       </li>
       <li>
         <a href="Manic-Mango.html">
           <h2>Manic Mango</h2>
+          <h6>Mango IPA.</h6>
           <img alt="Image of Manic Mango" src=""/>
 				</a>
       </li>
       <li>
         <a href="Mashtag-2015.html">
           <h2>#Mashtag 2015</h2>
-					<br>
+          <h6>US Hopped Black Barley Wine.</h6>
           <img alt="Image of #Mashtag 2015" src="https://images.punkapi.com/v2/90.png"/>
 				</a>
       </li>
     </ul>
+		
+		<footer>
+      <div id="socials">
+        <h4>Social Media</h4>
+          <ul>
+              <li><a href="www.facebook.com">Facebook</a></li>
+              <li><a href="www.twitter.com">Twitter</a></li>
+              <li><a href="www.youtube.com">Youtube</a></li>
+              <li><a href="www.instagram.com">Instagram</a></li>
+          </ul>
+      </div>
+      <div id="copyright">&copy Team 1 2021, This work is fictional any resemblence to people living or desceased is purely coincidental</div>
+		</footer>
   </body>
 </html>
