--- a/webProject/html/Casino-Rye-Ale.html
+++ b/webProject/html/Casino-Rye-Ale.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Casino Rye Ale</title>
+    <link href="../css/footer.css" rel="stylesheet"/>
   </head>
   <body>
     <h1>Casino Rye Ale</h1>
@@ -22,5 +23,18 @@
       <li>Spicy Bean Burrito</li>
       <li>Dundee Fruit Cake</li>
     </ul>
+		
+		<footer>
+      <div id="socials">
+        <h4>Social Media</h4>
+          <ul>
+              <li><a href="www.facebook.com">Facebook</a></li>
+              <li><a href="www.twitter.com">Twitter</a></li>
+              <li><a href="www.youtube.com">Youtube</a></li>
+              <li><a href="www.instagram.com">Instagram</a></li>
+          </ul>
+      </div>
+      <div id="copyright">&copy Team 1 2021, This work is fictional any resemblence to people living or desceased is purely coincidental</div>
+		</footer>
   </body>
 </html>
