--- a/webProject/html/Manic-Mango.html
+++ b/webProject/html/Manic-Mango.html
@@ -1,26 +1,39 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <title>Manic Mango</title>
-    </head>
-    <body>
-      <h1>Manic Mango</h1>
-      <h3>
-        Mango IPA
-      </h3>
-      <h4>2018</h4>
-      <p>
-        BrewDog v Brewski. One of a series of collaborations with European craft breweries,
-				aimed at promoting engagement and market growth. Our Swedish collaboration with Brewski is a mango IPA.
-        <div>6</div>
-        <img alt="Image for Manic Mango" src=""></img>
-      </p>
-			<h4>Food Pairings</h4>
-      <ul>
-        <li>Green Thai curry</li>
-        <li>Salmon with mango salsa</li>
-        <li>Pho soup with light rice noodles</li>
-      </ul>
-    </body>
+  <head>
+    <meta charset="UTF-8"/>
+    <title>Manic Mango</title>
+    <link href="../css/footer.css" rel="stylesheet"/>
+  </head>
+  <body>
+    <h1>Manic Mango</h1>
+    <h3>
+      Mango IPA
+    </h3>
+    <h4>2018</h4>
+    <p>
+      BrewDog v Brewski. One of a series of collaborations with European craft breweries,
+			aimed at promoting engagement and market growth. Our Swedish collaboration with Brewski is a mango IPA.
+      <div>6</div>
+      <img alt="Image for Manic Mango" src=""></img>
+    </p>
+		<h4>Food Pairings</h4>
+    <ul>
+      <li>Green Thai curry</li>
+      <li>Salmon with mango salsa</li>
+      <li>Pho soup with light rice noodles</li>
+    </ul>
+		<footer>
+      <div id="socials">
+        <h4>Social Media</h4>
+        <ul>
+          <li><a href="www.facebook.com">Facebook</a></li>
+          <li><a href="www.twitter.com">Twitter</a></li>
+          <li><a href="www.youtube.com">Youtube</a></li>
+          <li><a href="www.instagram.com">Instagram</a></li>
+        </ul>
+      </div>
+      <div id="copyright">&copy Team 1 2021, This work is fictional any resemblence to people living or desceased is purely coincidental</div>
+		</footer>
+  </body>
 </html>
