Added navbar to files

--- a/webProject/html/Casino-Rye-Ale.html
+++ b/webProject/html/Casino-Rye-Ale.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8"/>
     <title>Casino Rye Ale</title>
     <link href="../css/footer.css" rel="stylesheet"/>
+		<link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
+	<header>
+		<div class="nav">
+			<a href="../index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="search.html">Search</a>
+			<a href="#contact">Contact</a>
+		</div>
+	</header>
     <h1>Casino Rye Ale</h1>
     <h3>
       Life's a Gamble
