--- a/webProject/html/Manic-Mango.html
+++ b/webProject/html/Manic-Mango.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8"/>
     <title>Manic Mango</title>
     <link href="../css/footer.css" rel="stylesheet"/>
+		<link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
+		<div class="nav">
+			<a href="../index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="search.html">Search</a>
+			<a href="#contact">Contact</a>
+		</div>
+	</header>
     <h1>Manic Mango</h1>
     <h3>
       Mango IPA
