--- a/webProject/html/Misspent-Youth.html
+++ b/webProject/html/Misspent-Youth.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Misspent Youth</title>
-		<link href="../css/footer.css" rel="stylesheet"/>
+		<link href="../css/footer.css" rel="stylesheet">
+		<link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
+	<header>
+		<div class="nav">
+			<a href="../index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="search.html">Search</a>
+			<a href="#contact">Contact</a>
+		</div>
+	</header>
     <h1>Misspent Youth</h1>
     <h3>
       Milk & Honey Scotch Ale.
