--- a/webProject/index.html
+++ b/webProject/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+		<link rel="stylesheet" href="css/style.css">
+    <title>FermentCat - Home</title>
 </head>
 <body>
+	<header>
+		<div class="nav">
+			<a class="active" href="index.html">Home</a>
+      <a href="html/products.html">Products</a>
+      <a href="html/search.html">Search</a>
+			<a href="#contact">Contact</a>
+		</div>
+	</header>
     <h2> Home </h2>
-    <a href="html/search.html"> Search </a>
-    
 </body>
 </html>
