--- a/webProject/html/Mashtag-2015.html
+++ b/webProject/html/Mashtag-2015.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="UTF-8"/>
     <title>#Mashtag 2015</title>
-    <link href="../css/footer.css" rel="stylesheet"/>
+    <link href="../css/footer.css" rel="stylesheet">
+		<link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
+	<header>
+		<div class="nav">
+			<a href="../index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="search.html">Search</a>
+			<a href="#contact">Contact</a>
+		</div>
+	</header>
     <h1>#Mashtag 2015</h1>
     <h3>
       US Hopped Black Barley Wine.
