--- a/webProject/html/products.html
+++ b/webProject/html/products.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8"/>
     <title>Products</title>
     <link href="../css/products.css" rel="stylesheet"/>
+		<link rel="stylesheet" href="../css/style.css">
 		<link href="../css/footer.css" rel="stylesheet"/>
   </head>
   <body>
+		<header>
+			<div class="nav">
+				<a href="../index.html">Home</a>
+				<a class="active" href="products.html">Products</a>
+				<a href="search.html">Search</a>
+				<a href="#contact">Contact</a>
+			</div>
+		</header>
     <h1>Products</h1>
     <ul class="product-list">
       <li>
