--- a/webProject/html/search.html
+++ b/webProject/html/search.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/footer.css" rel="stylesheet"/>
+		<link rel="stylesheet" href="../css/style.css">
     <title>Search</title>
 </head>
 <body>
+	<header>
+		<div class="nav">
+			<a href="../index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a class="active" href="search.html">Search</a>
+			<a href="#contact">Contact</a>
+		</div>
+	</header>
     <h2> Search </h2>
 
     <button id="search-button"> Search </button>
