Added work done by Sirish

--- a/webProject/html/Manic-Mango.html
+++ b/webProject/html/Manic-Mango.html
@@ -11,7 +11,7 @@
 			<a href="../index.html">Home</a>
       <a href="products.html">Products</a>
       <a href="search.html">Search</a>
-			<a href="#contact">Contact</a>
+			<a href="contact.html">Contact</a>
 		</div>
 	</header>
     <h1>Manic Mango</h1>
@@ -35,10 +35,10 @@
       <div id="socials">
         <h4>Social Media</h4>
         <ul>
-          <li><a href="www.facebook.com">Facebook</a></li>
-          <li><a href="www.twitter.com">Twitter</a></li>
-          <li><a href="www.youtube.com">Youtube</a></li>
-          <li><a href="www.instagram.com">Instagram</a></li>
+          <li><a href="https://www.facebook.com">Facebook</a></li>
+          <li><a href="https://www.twitter.com">Twitter</a></li>
+          <li><a href="https://www.youtube.com">Youtube</a></li>
+          <li><a href="https://www.instagram.com">Instagram</a></li>
         </ul>
       </div>
       <div id="copyright">&copy Team 1 2021, This work is fictional any resemblence to people living or desceased is purely coincidental</div>
